@@ -1,5 +1,7 @@
 
-require 'ft_0_basic'
-require 'ft_1_old_treechecker'
-require 'ft_2_clone'
+here = File.dirname(__FILE__)
+
+require File.join(here, 'ft_0_basic')
+require File.join(here, 'ft_1_old_treechecker')
+require File.join(here, 'ft_2_clone')
 
